mehr Layout; mit Content-Stilen gestartet; Login/Logout; MLU Logo; globaler Footer

--- a/tpl.footer.html
+++ b/tpl.footer.html
@@ -1,4 +1,4 @@
-<footer id="ilMainFooter">
+<footer id="ilMainFooter" class="il_Footer ilFrame">
 
 	<p>powered by <a href="http://www.ilias.de" target="_blank" onmouseover="window.status='ILIAS open source - Homepage';return true;" onmouseout="window.status='';">ILIAS</a> (v{ILIAS_VERSION})</p>
 	<p>{TRANSLATION_LINK} {MEMORY_USAGE} {VALIDATION_LINKS} {SESS_INFO}</p>
@@ -22,5 +22,8 @@
 	{VALIDATION}
 	</td></tr></table>
 	<!-- END xhtml_validation -->
+	
+	<p>mluIlias skin for <a href="http://www.uni-halle.de">MLU Halle-Wittenberg</a></p>
+	<p>created by <a href="http://matthiaskretschmann.com">Matthias Kretschmann</a> based on the Delos layout.</p>
 
 </footer><!-- END #mainfooter -->
