login, logout, agreement, start responsive design with media queries

--- a/Services/Init/tpl.login.html
+++ b/Services/Init/tpl.login.html
@@ -2,7 +2,7 @@
 
 <div id="ilMainContainer" class="ilFrame ilLoginPage">
 	
-	<a href="" title="Zur Ilias Startseite">
+	<a href="./" title="Zur Ilias Startseite">
 		<img class="mlu-siegel" src="./Customizing/global/skin/mluilias/images/HeaderIcon.png" width="153" height="80" border="0" alt="MLU Siegel" />
 	</a>
 	
@@ -96,7 +96,7 @@
 		<a class="il_ContainerItemCommand" href="{CMD_REGISTER}">{REGISTER}</a>
 		<!-- END new_registration -->
 		<!-- BEGIN homelink -->
-		<a class="il_ContainerItemCommand" href="./index.php{CLIENT_ID}">{TXT_HOME}</a>
+		<a class="il_ContainerItemCommand publiclink" href="./index.php{CLIENT_ID}">{TXT_HOME}</a>
 		<!-- END homelink -->
 		<!-- BEGIN password_assistance -->
 		<a class="il_ContainerItemCommand" href="{CMD_FORGOT_PASSWORD}">{FORGOT_PASSWORD}</a>
