--- a/Services/Init/tpl.logout.html
+++ b/Services/Init/tpl.logout.html
@@ -1,7 +1,7 @@
-<div id="ilMainContainer" class="ilLoginPage">
+<div id="ilMainContainer" class="ilFrame ilLoginPage">
 
-	<a href="" title="Zur Ilias Startseite">
-		<img class="mlu-siegel" src="./Customizing/global/skin/mluilias/images/mlu-siegel.png" width="220" height="115" border="0" alt="MLU Siegel" />
+	<a href="./" title="Zur Ilias Startseite">
+		<img class="mlu-siegel" src="./Customizing/global/skin/mluilias/images/HeaderIcon.png" width="153" height="80" border="0" alt="MLU Siegel" />
 	</a>
 
 	<h1>{TXT_PAGEHEADLINE}</h1>
