--- a/tpl.main.html
+++ b/tpl.main.html
@@ -39,8 +39,14 @@
 				{EXPIRES}
 		<!-- END ChatStyle -->
 		
-		<link rel="shortcut icon" href="favicon.ico" />
-		<link rel="apple-touch-icon" href="apple-touch-icon.png">
+		<!-- For iPhone 4 with high-resolution Retina display: -->
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="./Customizing/global/skin/mluilias/apple-touch-icon-114x114-precomposed.png">
+		<!-- For first-generation iPad: -->
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="./Customizing/global/skin/mluilias/apple-touch-icon-72x72-precomposed.png">
+		<!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+		<link rel="apple-touch-icon-precomposed" href="./Customizing/global/skin/mluilias/apple-touch-icon-precomposed.png">
+		
+		<link rel="shortcut icon" href="./Customizing/global/skin/mluilias/images/favicon.ico" />
 		
 		<!-- BEGIN css_file -->
 		<link rel="stylesheet" href="{CSS_FILE}" media="{CSS_MEDIA}" />
