--- a/tpl.main.html
+++ b/tpl.main.html
@@ -39,6 +39,8 @@
 				{EXPIRES}
 		<!-- END ChatStyle -->
 		
+		<!-- For third-generation iPad with high-resolution Retina display: -->
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="./Customizing/global/skin/mluilias/images/apple-touch-icon-144x144-precomposed.png">
 		<!-- For iPhone 4 with high-resolution Retina display: -->
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="./Customizing/global/skin/mluilias/images/apple-touch-icon-114x114-precomposed.png">
 		<!-- For first-generation iPad: -->
