sane and semantic html5 based main header; menu fixes; removed content backgrounds/borders

--- a/tpl.footer.html
+++ b/tpl.footer.html
@@ -17,13 +17,7 @@
 	</table></center>
 	<!-- END included_files -->
 	
-	<!-- BEGIN xhtml_validation -->
-	<table class="fullwidth_invisible"><tr><td class="ilInvisibleBorder">
-	{VALIDATION}
-	</td></tr></table>
-	<!-- END xhtml_validation -->
-	
-	<p>mluIlias skin for <a href="http://www.uni-halle.de">MLU Halle-Wittenberg</a></p>
+	<p>mluIlias skin (4.2-wip) for <a href="http://www.uni-halle.de">MLU Halle-Wittenberg</a></p>
 	<p>created by <a href="http://matthiaskretschmann.com">Matthias Kretschmann</a> based on the Delos layout.</p>
 
 </footer><!-- END #mainfooter -->
