--- a/Services/MainMenu/tpl.main_menu.html
+++ b/Services/MainMenu/tpl.main_menu.html
@@ -5,7 +5,7 @@ Author: Matthias Kretschmann | http://mkretschmann.com
 -->
 
 
-<header role="banner">
+<header role="banner" class="clearfix">
 	<!-- BEGIN osd_enabled --><script type="text/javascript">var OSDNotifier; $(function() { OSDNotifier = OSDNotifications({initialNotifications: {INITIAL_NOTIFICATIONS}, pollingIntervall: {OSD_POLLING_INTERVALL}, playSound: {OSD_PLAY_SOUND}})});</script><!-- END osd_enabled -->
 	<!-- BEGIN osd_container -->
     <div class="osdNotificationContainer"></div>
@@ -18,31 +18,39 @@ Author: Matthias Kretschmann | http://mkretschmann.com
 		<h1>{TXT_HEADER_TITLE}</h1>
 		<!-- END header_top_title -->
 	</hgroup>
+</header>
+
+<aside id="userAccount">
+	<!-- BEGIN status_box -->
+	<!-- BEGIN status_item -->
+	<a id="mailNotification" class="il_ItemProperty" target="_top" href="{STATUS_HREF}">
+		<i class="icon-mail"></i>
+		<!-- BEGIN status_text -->
+		<span class="ilMMStatus">{STATUS_TXT}</span>
+		<span class="small" style="visibility:hidden;">{STATUS_TXT}</span>
+		<!-- END status_text -->
+	</a>
+	<!-- END status_item -->
+	<!-- END status_box -->
+
 	<!-- BEGIN userisanonymous -->
 	<div class="ilLogin">
 		<span class="il_menu">
-		{TXT_NOT_LOGGED_IN}.
-		<a href="{LINK_LOGIN}" class="ilLogin" target="_top">{TXT_LOGIN}</a>
-		<!-- BEGIN registration_link --><a href="{LINK_REGISTER}" class="ilLogin" target="_top">{TXT_REGISTER}</a><!-- END registration_link -->
-		{LANG_SELECT}</span>
+			{TXT_NOT_LOGGED_IN}.
+			<a href="{LINK_LOGIN}" class="ilLogin" target="_top">{TXT_LOGIN}</a>
+			<!-- BEGIN registration_link -->
+			<a href="{LINK_REGISTER}" class="ilLogin" target="_top">{TXT_REGISTER}</a>
+			<!-- END registration_link -->
+			{LANG_SELECT}
+		</span>
 	</div>
 	<!-- END userisanonymous -->
 	<!-- BEGIN userisloggedin -->
 	<div class="ilLogin">
-		{USERNAME} » <a class="ilLogin" href="{LINK_LOGOUT2}" target="_top">{TXT_LOGOUT2}</a> {LANG_SELECT}
+		{USERNAME} » <a class="ilLogin" href="{LINK_LOGOUT2}" target="_top">{TXT_LOGOUT2}</a>
 	</div>
 	<!-- END userisloggedin -->
-	<!-- BEGIN status_box -->
-	<div class="xsmall">
-		<!-- BEGIN status_item -->
-		<a class="il_ItemProperty" target="_top" href="{STATUS_HREF}">
-			<img src="{STATUS_IMG}"/>
-			<!-- BEGIN status_text -->
-			<span class="ilMMStatus">{STATUS_TXT}</span><span class="small" style="visibility:hidden;">{STATUS_TXT}</span><!-- END status_text -->
-		</a><!-- END status_item -->
-	</div>
-	<!-- END status_box -->
-</header>
+</aside>
 
 <nav role="navigation" class="clearfix">
 	<h1 class="ilAccHeadingHidden">{TXT_MAIN_MENU}</h1>
