updated and reduced modernizr build

--- a/tpl.main.html
+++ b/tpl.main.html
@@ -60,7 +60,7 @@
 		<!-- {LOCATION_NEWCONTENT_STYLESHEET_TAG} -->
 		
 		<!-- Modernizr enables HTML5 elements & feature detects -->
-  		<script src="./Customizing/global/skin/mluilias/assets/js/libs/modernizr-2.0.min.js"></script>
+  		<script src="./Customizing/global/skin/mluilias/assets/js/libs/modernizr-2.6.1-custom.min.js"></script>
   
 		<!-- BEGIN js_file -->
 		<script src="{JS_FILE}"></script>
