--- a/Services/Init/tpl.logout.html
+++ b/Services/Init/tpl.logout.html
@@ -1,20 +1,19 @@
-<div id="ilMainContainer" class="ilFrame ilLoginPage">
+<div id="ilMainContainer" class="ilFrame ilLogoutPage">
 
-	<a href="./" title="Zur Ilias Startseite">
-		<img class="mlu-siegel" src="./Customizing/global/skin/mluilias/images/HeaderIcon.png" width="153" height="80" border="0" alt="MLU Siegel" />
-	</a>
+	<a href="./" id="logo" title="Zur Ilias Startseite"></a>
 
-	<h1>{TXT_PAGEHEADLINE}</h1>
+	<h3 class="ilFormHeader">{TXT_PAGEHEADLINE}</h3>
 	<p>{TXT_LOGOUT_TEXT}</p>
 	
-	<p>
-		<a class="il_ContainerItemCommandVisible" href="./login.php{CLIENT_ID}">{TXT_LOGIN}</a>&nbsp;
-		<!-- BEGIN homelink -->
-		<a class="il_ContainerItemCommand none" href="./index.php{CLIENT_ID}">{TXT_HOME}</a>
-		<!-- END homelink -->
-		<!-- BEGIN client_list -->
-		<a class="il_ContainerItemCommand none" href="{CMD_CLIENT_LIST}">{TXT_CLIENT_LIST}</a>
-		<!-- END client_list -->
-	</p>
-
+	<footer>
+		<p>
+			<a class="il_ContainerItemCommandVisible" href="./login.php{CLIENT_ID}">{TXT_LOGIN}</a> | 
+			<!-- BEGIN homelink -->
+			<a class="il_ContainerItemCommand none" href="./index.php{CLIENT_ID}">{TXT_HOME}</a>
+			<!-- END homelink -->
+			<!-- BEGIN client_list -->
+			<a class="il_ContainerItemCommand none" href="{CMD_CLIENT_LIST}">{TXT_CLIENT_LIST}</a>
+			<!-- END client_list -->
+		</p>
+	</footer>
 </div>
