--- a/Services/Init/tpl.login.html
+++ b/Services/Init/tpl.login.html
@@ -58,3 +58,11 @@
 		</p>
 	</footer>
 </div><!-- END styling div -->
+
+<script>
+	// focus fields on load
+	if (document.formlogin.username && document.formlogin.password) {
+		if(document.formlogin.username.value!="") document.formlogin.password.focus();
+		else document.formlogin.username.focus();
+	}
+</script>
