updated version number in footer

--- a/tpl.footer.html
+++ b/tpl.footer.html
@@ -17,7 +17,7 @@
 	</table></center>
 	<!-- END included_files -->
 	
-	<p>mluIlias skin (4.2-wip) for <a href="http://www.uni-halle.de">MLU Halle-Wittenberg</a></p>
+	<p>mluIlias skin 4.2 for <a href="http://www.uni-halle.de">MLU Halle-Wittenberg</a></p>
 	<p>created by <a href="http://matthiaskretschmann.com">Matthias Kretschmann</a> based on the Delos layout.</p>
 
 </footer><!-- END #mainfooter -->
